--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "engines": {
     "node": "^18",
-    "pnpm": "8.1.1"
+    "pnpm": "^8"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@types/express@4.17.17": "patches/@types__express@4.17.17.patch"
+    }
   }
 }
